@@ -9,6 +9,7 @@
 #                                                                                          #
 ############################################################################################
 
+[16] --> Final fix of Hammer of the Righteous dmg during Avenging Wrath.
 [15] --> Fix Dancing Rune Weapon.
 [14] --> Elemental focus(shaman talent) correct proc.
 [13] --> Fix no combo points after Mind Control.
